# luban-ci

./: .gitignore  CHANGELOG.md  Makefile  Makefile.env  PLAN.md  README.md  REQUIREMENTS.md  builder.toml
tools/luban-provisioner/: Dockerfile  Makefile  Makefile.env  README.md  pyproject.toml
tools/luban-provisioner/src/: main.py  provider_factory.py  utils.py
tools/luban-provisioner/src/commands/: config.py  dagster.py  gitops.py  k8s.py  project.py  promote.py  source.py
tools/luban-provisioner/src/luban_provisioner/: __init__.py  main.py  provider_factory.py  utils.py
tools/luban-provisioner/src/luban_provisioner/commands/: config.py  dagster.py  gitops.py  infra.py  k8s.py  project.py  promote.py  source.py
tools/luban-provisioner/src/luban_provisioner/providers/: ado.py  azure.py  base.py  github.py
tools/luban-provisioner/src/providers/: azure.py  github.py
tools/luban-provisioner/templates/gitops/luban-dagster-code-location-gitops-template/: cookiecutter.json
tools/luban-provisioner/templates/gitops/luban-dagster-code-location-gitops-template/{{cookiecutter.app_name}}-gitops/: README.md
tools/luban-provisioner/templates/gitops/luban-dagster-platform-gitops-template/: cookiecutter.json
tools/luban-provisioner/templates/gitops/luban-dagster-platform-gitops-template/{{cookiecutter.app_name}}-gitops/: README.md
tools/luban-provisioner/templates/gitops/luban-gitops-template/: cookiecutter.json
tools/luban-provisioner/templates/gitops/luban-gitops-template/{{cookiecutter.app_name}}-gitops/: README.md
tools/luban-provisioner/templates/gitops/luban-gitops-template/{{cookiecutter.app_name}}-gitops/app/base/: configmap.yaml  (+3 more)
tools/luban-provisioner/templates/infra-cd-base/: cookiecutter.json
tools/luban-provisioner/templates/infra-cd-overlay/: cookiecutter.json
tools/luban-provisioner/templates/infra-cd-overlay/{{cookiecutter.namespace}}/: image-pull-secret-patch.yaml  image-pull-secret.yaml  kustomization.yaml  namespace.yaml
tools/luban-provisioner/templates/infra-ci-base/: cookiecutter.json
tools/luban-provisioner/templates/infra-ci-base/{{cookiecutter.repo_name}}/base/: kustomization.yaml  workflow-semaphores.yaml
tools/luban-provisioner/templates/infra-ci-base/{{cookiecutter.repo_name}}/base/config/: luban-config.yaml
tools/luban-provisioner/templates/infra-ci-base/{{cookiecutter.repo_name}}/base/rbac/: project-users-binding.yaml  workflow-runner-binding.yaml
tools/luban-provisioner/templates/infra-ci-base/{{cookiecutter.repo_name}}/base/secrets/: ado-creds.yaml  ado-ssh-creds.yaml  azure-creds.yaml  azure-ssh-creds.yaml  github-creds.yaml  harbor-creds.yaml  luban-ca-cert.yaml  quay-creds.yaml  uv-mirror-ca-cert.yaml  uv-mirror-netrc.yaml
tools/luban-provisioner/templates/infra-ci-base/{{cookiecutter.repo_name}}/base/service_accounts/: project-users.yaml  workflow-runner.yaml
tools/luban-provisioner/templates/infra-ci-overlay/: cookiecutter.json
tools/luban-provisioner/templates/infra-ci-overlay/{{cookiecutter.namespace}}/: kustomization.yaml  project-users-patch.yaml  promotion-shim.yaml  view-templates-binding.yaml
tools/luban-provisioner/templates/project/: cookiecutter.json
tools/luban-provisioner/templates/project/{{cookiecutter.target_namespace}}/: namespace.yaml
tools/luban-provisioner/templates/project/{{cookiecutter.target_namespace}}/config/: workflow-semaphores.yaml
tools/luban-provisioner/templates/project/{{cookiecutter.target_namespace}}/rbac/: admin-rolebinding.yaml  developer-rolebinding.yaml  view-templates-binding.yaml  workflow-runner-binding.yaml  workflow-runner-kpack-binding.yaml
tools/luban-provisioner/templates/project/{{cookiecutter.target_namespace}}/service-accounts/: project-users.yaml  secrets.yaml  test-users.yaml  workflow-runner.yaml
tools/luban-provisioner/templates/project/{{cookiecutter.target_namespace}}/workflows/: promotion-shim.yaml
tools/luban-provisioner/templates/source/luban-dagster-code-location-source-template/: cookiecutter.json
tools/luban-provisioner/templates/source/luban-dagster-code-location-source-template/{{cookiecutter.app_name}}/: README.md  pyproject.toml
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/: cookiecutter.json
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/hooks/: post_gen_project.py  pre_gen_project.py
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/{{cookiecutter.app_name}}/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.in
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/{{cookiecutter.app_name}}/dagster_home/: dagster.yaml
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/{{cookiecutter.app_name}}/dbt_project/: .dbt_dagsterizer_template  dagsterization.yml  dbt_project.yml  profiles.yml
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/{{cookiecutter.app_name}}/docker/: docker-compose.yml
tools/luban-provisioner/templates/source/luban-dagster-dbt-starrocks-code-location-source-template/{{cookiecutter.app_name}}/docs/: local_development.md  template_usage.md
tools/luban-provisioner/templates/source/luban-dagster-platform-source-template/: cookiecutter.json
tools/luban-provisioner/templates/source/luban-dagster-platform-source-template/{{cookiecutter.app_name}}/: README.md  pyproject.toml
tools/luban-provisioner/templates/source/luban-python-template/: cookiecutter.json
tools/luban-provisioner/templates/source/luban-python-template/{{cookiecutter.app_name}}/: README.md  pyproject.toml
tools/luban-provisioner/tests/: test_git_auth.py
(+285 files in other folders)
