[project]
name = "{{cookiecutter.app_name}}"
version = "0.1.0"
description = "Dagster Code Location for {{cookiecutter.app_name}}"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster=={{cookiecutter.dagster_version}}",
    "dagster-postgres",
    "dagster-k8s"
]

[dependency-groups]
dev = [
    "dagster-webserver=={{cookiecutter.dagster_version}}",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

{% if cookiecutter.python_index_url %}
[[tool.uv.index]]
name = "{{ cookiecutter.python_index_name }}"
url = "{{ cookiecutter.python_index_url }}"
default = true
{% endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.luban]
bp-execution-mode = "direct"
