[project]
name = "{{cookiecutter.app_name}}"
version = "0.1.0"
description = "Dagster Platform for {{cookiecutter.app_name}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster=={{cookiecutter.dagster_version}}",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-k8s",
    "opentelemetry-exporter-otlp>=1.37.0,<2",
    "opentelemetry-sdk>=1.37.0,<2"
]

[tool.luban]
bp-execution-mode = "direct"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luban_dagster_platform"]

{% if cookiecutter.python_index_url %}
[[tool.uv.index]]
name = "{{ cookiecutter.python_index_name }}"
url = "{{ cookiecutter.python_index_url }}"
default = true
{% endif %}
